--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="YtYBVOhCwteF9vIh61Ik--DW5s14gboFDu_Wp_kmsFA" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stephanie Alkonga- NISU|CICS</title>
